--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
   },
   "devDependencies": {
     "miragejs": "^0.1.47",
+    "msw": "^1.3.0",
     "tailwindcss": "^3.3.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
